--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
         <div>
             <h2>Openingsuren</h2>
-            <img src="img/openingsuren.png" alt="">
+            <img class="openings" src="img/openingsuren.png" alt="">
         </div>
     </div>
     <div id="map" class="map">
