Popup test overons WP

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>HET WERKHUIS:</h1>
         <p>
             Het Werkhuis, een plek waar gewerkt, gerept en Geraasd kan worden, maar ook waar rust en vriendschap de fundering vormen om een goede sfeer te garanderen. Daar waar samenwerking en behulpzaamheid zich uiten in meesterwerken en inspirerende workshops en events een extensie van het leren aan LUCA zijn.
-             
+              <br> <br>
             Zo kunnen wij ons stralen doen uitstralen, zodat zij die de deuren van Het Werkhuis verlaten, de straten van Genk een glimlach na laten</p>
     </div>
     <div id="geraas" class="geraas">
@@ -91,7 +91,7 @@
                     <li>Taken uitvoeren als: shift openhouden tentoonstelling, beschikbaar zijn op open atelier dagen, onderhoud werkhuis, taken achter de schermen</li>
                 </ul>
             </div>
-            <button><a href="https://docs.google.com/forms/d/e/1FAIpQLSdwAwfq9M7jR5-OE3bBIsF0Eoj_lpZGQl20FPpqVv0Y1Vvm2A/viewform">Aanmelden</a></button>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdwAwfq9M7jR5-OE3bBIsF0Eoj_lpZGQl20FPpqVv0Y1Vvm2A/viewform"><button>Aanmelden</a></button>
         </div>
         
     </div>
