--- a/index.html
+++ b/index.html
@@ -99,14 +99,17 @@
     <div id="contact" class="contact">
         <h1>CONTACT</h1>
         <p>werkhuisgenk@gmail.com</p>
-            <ul><li><a href="https://www.instagram.com/werkhuis.genk/"><img src="img/icons8-instagram.svg" alt=""></a></li><li><img src="img/icons8-facebook.svg" alt=""></li></ul>
+            <ul>
+                <a href="https://www.instagram.com/werkhuis.genk/"><li><img src="img/icons8-instagram.svg" alt=""></li></a>
+                <li><img src="img/icons8-facebook.svg" alt=""></li>
+            </ul>
         <h1>Bezoek ons!</h1>
         <div>
-            <h2>Adres</h2>
+            <h2>Adres:</h2>
             <p>Rootenstraat 33, 3600 Genk</p>
         </div>
         <div>
-            <h2>Openingsuren</h2>
+            <h2 class="oh2">Openingsuren:</h2>
             <img class="openings" src="img/openingsuren.svg" alt="">
         </div>
     </div>
