--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 </head>
 <body>
     <img class="background" src="img/plattegrond.png" alt="">
+
+    <div id="overlay" onclick="CloseModal()" class="overlay">
+        <img id="img" class="img" src="img/CHARLA_2.png" alt="">
+        <img id="img" class="img" src="img/Curtain1.png" alt="">
+    </div>
+    <script src="overlay.js"></script>
+
    <header>
     <img class="logo" src="./img/WERKHUIS_Logo.svg" alt="">
 
