Overlay with new fotos

--- a/index.html
+++ b/index.html
@@ -19,8 +19,18 @@
     <img class="background" src="img/plattegrond.png" alt="">
 
     <div id="overlay" onclick="CloseModal()" class="overlay">
-        <img id="img" class="img" src="img/CHARLA_2.png" alt="">
-        <img id="img" class="img" src="img/Curtain1.png" alt="">
+
+        <ul>
+            <li><img id="img" class="img" src="img/werk-cedric.jpg" alt=""></li>
+            <li><img id="img" class="img" src="img/werk-fenia.jpg" alt=""></li>
+            <li><img id="img" class="img" src="img/werk-juul.jpg" alt=""></li>
+            <li><img id="img" class="img" src="img/werk-lars.png" alt=""></li>
+            <li><img id="img" class="img" src="img/werk-kaat.jpg" alt=""></li>
+            <li><img id="img" class="img" src="img/werk-lola.jpg" alt=""></li>
+            <li><img id="img" class="img" src="img/werk-nathan.jpg" alt=""></li>
+            <li><img id="img" class="img" src="img/werk-sim.jpg" alt=""></li>
+        </ul>
+
     </div>
     <script src="overlay.js"></script>
 
