--- a/index.html
+++ b/index.html
@@ -51,18 +51,19 @@
    </header>
 
    <main>
-    <div id="overons" class="overons">
-        <div class="close" onclick="CloseModal()">
-            <svg  xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"  fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
-        </div>
-       
-        <h1>WERKHUIS</h1>
+    <div id="overons" class="overons" >
+        <span class="close" onclick="CloseModal()">
+            <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24"  fill="#000000"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"/></svg>
+        </span>    
+
+
+        <h1>HET WERKHUIS:</h1>
         <p>
             Het Werkhuis, een plek waar gewerkt, gerept en Geraasd kan worden, maar ook waar rust en vriendschap de fundering vormen om een goede sfeer te garanderen. Daar waar samenwerking en behulpzaamheid zich uiten in meesterwerken en inspirerende workshops en events een extensie van het leren aan LUCA zijn.
-             
-            Zo kunnen wij ons stralen doen uitstralen, zodat zij die de deuren van Het Werkhuis verlaten, de straten van Genk een glimlach na laten
-        </p>
+              <br> <br>
+            Zo kunnen wij ons stralen doen uitstralen, zodat zij die de deuren van Het Werkhuis verlaten, de straten van Genk een glimlach na laten</p>
     </div>
+
     <div id="geraas" class="geraas">
         <img class="geraaslogo" src="img/GERAAS_Logo.svg" alt="">
         <img class="geraasfoto" src="img/geraas-fotos.jpg" alt="">
