feat: opencall version without links formulier

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     <!-- <img class="background" src="img/plattegrond.png" alt=""> -->
 
     <div id="overlay" onclick="CloseModal()" class="overlay">
-        <img src="img/openingsweekend.jpg" alt="">
-<!--          <ul>
+        <!-- <img src="img/openingsweekend.jpg" alt=""> -->
+         <ul>
             <li><img id="img" class="img" src="img/werk-cedric.jpg" alt=""></li>
             <li><img id="img" class="img" src="img/werk-fenia.jpg" alt=""></li>
             <li><img id="img" class="img" src="img/werk-juul.jpg" alt=""></li>
@@ -30,7 +30,7 @@
             <li><img id="img" class="img" src="img/werk-lola.jpg" alt=""></li>
             <li><img id="img" class="img" src="img/werk-nathan.jpg" alt=""></li>
             <li><img id="img" class="img" src="img/werk-sim.jpg" alt=""></li>
-          </ul>  -->
+          </ul> 
 
     </div>
     <script src="overlay.js"></script>
@@ -49,29 +49,21 @@
    </header>
 
    <main>
-    <div id="geraas" class="geraas">
-        <a href="https://fb.me/e/2j2DyXR7J" target="_blank" rel="noopener noreferrer"><img class="geraaslogo" src="img/openingsweekend.jpg" alt=""></a>
+    <div id="extra" class="extra">
+        <img class="extralogo" src="img/opencall-residentie2.jpg" alt="">
 
         <p>
-            Tijdens het weekend van 19 en 20 november vieren we de start van onze creatieve broedplaats, en dat doen we het liefst samen met jou.
+            Het werkhuis zoekt vijf nieuwe residenten die willen bijdragen aan een gezamelijke werkplek voor creatievelingen.
             <br> <br>
-            Zaterdagavond vanaf 19:00 ben je welkom om samen te proosten en te dansen. Twee exposities, waarin de Werkhuis residenten en het Geraas Collectief hun allereerste creaties uit de ateliers tentoonstellen, zijn te bezichtigen. Om 20:00 is er live muziek en luidt een aantal sprekers het weekend in. De DJ Line-up start om 22:30 in onze Club Derive op de eerste verdieping.
+            We bekijken applicaties t.e.m. 01-02-2023
             <br> <br>
-            Op zondag 20 november zijn van 10:00 tot 20:00 doorlopend de deuren van het Werkhuis, inclusief de deuren van de ateliers geopend voor publiek.
-            <br> <br>
-            Zin om langs te komen tijdens de openingsreceptie? Schrijf je gratis in via deze link; https://forms.gle/vqCPu5msLdYWKj989 het aantal plaatsen voor zaterdagavond is beperkt!
-            <br> <br>
-            Hopelijk zien we je dan!
+            Aanmelden kan via de knop hieronder.
         </p>
+
         <div class="knop">
-            <a href="https://forms.gle/NMexD1aBiZqi5rZT9" target="_blank" rel="noopener noreferrer"><button>AANMELDEN</button></a>
+            <a href="" target="_blank" rel="noopener noreferrer"><button>AANMELDEN</button></a>
         </div>
     </div>
-
-        <div class="clubderive">
-            <a href="https://fb.me/e/3E14rVf5p" target="_blank" rel="noopener noreferrer"><img src="img/FacebookBanner.png" alt=""></a>
-        </div>
-
 
     <div id="overons" class="overons">
         <h1>WERKHUIS</h1>
@@ -112,7 +104,6 @@
             <div>
                 <h2>Wat krijg je?</h2>
                 <ul>
-                    <li>Eigen werktafel, kast en werkplek</li>
                     <li>Toegang tot stofruimte en smodderstrook </li>
                     <li>Expo ruimte</li>
                 </ul>
@@ -133,7 +124,6 @@
             <div>
                 <h2>Wat krijg je?</h2>
                 <ul>
-                    <li>Eigen werktafel, kast en werkplek</li>
                     <li>Toegang tot stofruimte en smodderstrook </li>
                     <li>Werkstuk mag blijven staan gedurende afgesproken periode</li>
                     <li>Na periode laat je alles proper achter en neem je je afval mee</li>
