residentie tekst updated + white spot in logo deleted

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,8 @@
             <div>
                 <h2>Wat krijg je?</h2>
                 <ul>
-                    <li>Toegang tot stofruimte en smodderstrook </li>
+                    <li>Een oppervlakte in een gedeelte ruimte</li>
+                    <li>Toegang tot stofruimte</li>
                     <li>Expo ruimte</li>
                 </ul>
             </div>
@@ -112,7 +113,6 @@
                 <h2>Wat vragen we?</h2>
                 <ul>
                     <li>Hoog Engagement</li>
-                    <li>Werkhuis overnemen na Geraas</li>
                     <li>Regelmatige aanwezigheid</li>
                     <li>Taken uitvoeren als: shift openhouden tentoonstelling, beschikbaar zijn op open atelier dagen, onderhoud werkhuis, taken achter de schermen</li>
                 </ul>
@@ -124,7 +124,8 @@
             <div>
                 <h2>Wat krijg je?</h2>
                 <ul>
-                    <li>Toegang tot stofruimte en smodderstrook </li>
+                    <li>Een oppervlakte in een gedeelte ruimte</li>
+                    <li>Toegang tot stofruimte</li>
                     <li>Werkstuk mag blijven staan gedurende afgesproken periode</li>
                     <li>Na periode laat je alles proper achter en neem je je afval mee</li>
                 </ul>
@@ -134,6 +135,7 @@
                 <ul>
                     <li>Regelmatige aanwezigheid</li>
                     <li>Taken uitvoeren als: shift openhouden tentoonstelling, beschikbaar zijn op open atelier dagen, onderhoud werkhuis, taken achter de schermen</li>
+                    <li>Na periode laat je alles proper achter en neem je je afval mee</li>
                 </ul>
             </div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdwAwfq9M7jR5-OE3bBIsF0Eoj_lpZGQl20FPpqVv0Y1Vvm2A/viewform" target="_blank" rel="noopener noreferrer"><button>AANMELDEN</button></a>
