--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,9 @@
         </p>
 
         <div class="knop">
-            <a href="" target="_blank" rel="noopener noreferrer"><button>AANMELDEN</button></a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdwAwfq9M7jR5-OE3bBIsF0Eoj_lpZGQl20FPpqVv0Y1Vvm2A/viewform" target="_blank" rel="noopener noreferrer">
+                <button>AANMELDEN</button>
+            </a>
         </div>
     </div>
 
